細かい表現および誤字脱字の訂正

--- a/hardproblem/2-03.html
+++ b/hardproblem/2-03.html
@@ -39,7 +39,7 @@
 　当初は水着くらいしか持ってくるつもりはなかったが、あれもこれもと詰め込んでいるうちに随分と重たくなってしまった。流石にスイカは持ってこなかったものの、ゴーグルにシュノーケルに折りたたみの椅子。浮き輪に日焼け止めと盛りだくさんである。
 「あっ、代わりますよ」
 「いや、まだ大丈夫……だと思う。しんどくなったら代わってもらうから、そのときはよろしくね」
-　電車が駅に着くと、ふたりは荷物を抱えていそいそと席を離れた。タラップを慎重に降りてホームに降り立つと、濃厚な夏の気配が出迎えてくれる。クーラーに慣れた体を溶かすようなべっとりとまとわりつく熱気に、ジワジワと降り注いでは耳鳴りのように反響する蝉の声。鼻孔に感じる微(かす)かな磯の香りが、否が応にも海の近さを実感させてくれた。
+　電車が駅に着くと、ふたりは荷物を抱えていそいそと席を離れた。タラップを慎重に降りてホームに降り立つと、濃厚な夏の気配が出迎えてくれる。クーラーに慣れた体を溶かすようなべっとりとまとわりつく熱気に、ジワジワと降り注いでは耳鳴りのように反響する蝉の声。鼻孔に感じる<ruby>微<rp>(</rp><rt>かすか</rt><rp>)</rp></ruby>かな磯の香りが、否が応にも海の近さを実感させてくれた。
 「<ruby>暑<rp>(</rp><rt>あっつ</rt><rp>)</rp></ruby>……」
 　肌を焼く強烈な日光に、一分と待たずして汗が吹き出てくる。
 「ところでさ」
@@ -85,7 +85,7 @@
 　嘘を付くときだけ急に饒舌になる自分が少し嫌だった。
 （まあでも……何かあってからじゃ遅いしね）
 　前回のメンテナンス時に東から聞いた話が脳裏をよぎる。
-　なんでもヒューマノイドが凶悪犯罪に巻き込まれる確率は、通常の人間の約10倍にも上るらしい。その中でも一番多いのが誘拐であり、確か『大吉を引く程度に運が良ければ転売の末に新しい主人のもとで第二の人生を送ることになり、中吉や小吉なら改造を施された上でピンクネオンの床屋で春を売ることになる。そして凶ならスナッフビデオに出演させられ、生きたままパーツを剥ぎ取られることになる』……だとか。そう、何かあってからでは遅いのだ。
+　なんでもアンドロイドが凶悪犯罪に巻き込まれる確率は、通常の人間の約10倍にも上るらしい。その中でも一番多いのが誘拐であり、確か『大吉を引く程度に運が良ければ転売の末に新しい主人のもとで第二の人生を送ることになり、中吉や小吉なら改造を施された上でピンクネオンの床屋で春を売ることになる。そして凶ならスナッフビデオに出演させられ、生きたままパーツを剥ぎ取られることになる』……だとか。そう、何かあってからでは遅いのだ。
 　しばし車窓の景色を眺めていると、タクシーは目的の海水浴場に到着した。運賃の支払いを済ませてドアを開けると一層強い海の香りが漂ってくる。
 「それじゃあ、楽しんでいってくださいね」
 　運転手はそう言って車を発進させると細い路地に入り込み、元来た方向へと帰っていった。おそらく駅前で再び客を待つのだろう。エンジン音が行楽地の喧騒にかき消されていく。
