--- a/hardproblem/4-03.html
+++ b/hardproblem/4-03.html
@@ -97,8 +97,8 @@
 　リコは困った顔で希海を見た。
 「…………」
 　希海も困った顔でリコを見た。どうしよう。はるばる歩いてこんな場所にまで来たというのに、肝心の眺望がこの有り様ではまったくの無駄足ではないか。
-　いや、大した夜景でないことははじめから分かっていたし、期待もしていない。なぜならば、ここへ来たそもそもの訳が「それらしい理由を付けて人目のない場所へ行きたかった」というものである。夜景は方便だ。そして方便である以上、その夜景が多少しょっぱいものであったとしても何ら問題はない。それにリコのことだからある程度以上のものであればなんでも喜んでくれる……、そんな下心もあった。
-　だが眼前に広がる夜景は、それ以下の有り様である。いや、これを夜景と呼ぶことからして既に烏滸がましく、「駅前の繁華街が遠目に見えている」と形容した方がずっと忠実な表現だ。ひと気の少なさに相応しい貧素な眺望を前にして、希海は頭を抱えた。
+　いや、大した夜景でないことははじめから分かっていたし、期待もしていない。なぜならば、ここへ来たそもそもの訳が『それらしい理由を付けて人目のない場所へ行きたかった』というものである。夜景は方便だ。そして方便である以上、その夜景が多少しょっぱいものであったとしても何ら問題はない。それにリコのことだからある程度以上のものであればなんでも喜んでくれる……、そんな下心もあった。
+　だが眼前に広がる夜景は、それ以下の有り様である。いや、これを夜景と呼ぶことからして既に烏滸がましく、『駅前の繁華街が遠目に見えている』と形容した方がずっと忠実な表現だ。ひと気の少なさに相応しい貧素な眺望を前にして、希海は頭を抱えた。
 　これから一体どうしよう。
 　『仕方がないね』と言って帰宅するか、『戻ろうか』と言って地区センターへときびすを返すか。あるいは『見て！　綺麗な夜景ね！』と強引に自分を騙し続けるという方法もある。
 「……まあ、」
@@ -125,11 +125,13 @@
 　だがその言葉が、一抹の不安となって希海の中を漂い続ける。リコの中で眠っている記憶はひょっとしたら今にも目覚めてしまうのかもしれない。「なんとなく」という言葉は記憶が蘇りかけていることを示す徴候なのかもしれない。
 　まさか。考えすぎだろう。心の中のもう一人の自分が疑義を差し挟んだ。
 　確かに、いささか杞憂が過ぎるのかもしれない。だが、リコの記憶がいつ目覚めるか分かったものではないことは疑いようのない事実であるはずだ。そして記憶が目覚めるその時が、これまで続けてきた自分たちの関係性の変曲点になってしまうのかもしれない。
-「もし……もしだよ？　もしもリコが昔のことを思い出したら……どうする？　リコが前に暮らしていた場所や、リコが前に仕えてた人のことを思い出したら……」
-　いままで漠然と感じていた不安に言葉が輪郭を提供し、希海の胸が一層強く締め付けられた。そうだ。この関係は、いつまで続くか分からない。結局、自分が一番恐れているのはそのことなのだ。あるときリコが自らの過去を思い出して、今の生活よりも大切な思い出や、希海よりもずっと大切だった人のことを思い出してしまったら。そのとき自分は、リコは一体どうするのだろう。
+「もし……もしだよ？　もしもリコが昔のことを思い出したら……どうする？」
+　いままで漠然と感じていた不安に言葉が輪郭を提供し、希海の胸が一層強く締め付けられた。
+「リコが前に暮らしていた場所や、リコが前に仕えてた人のことを思い出したら、そのときは……」
+　そうだ。この関係は、いつまで続くか分からない。結局、自分が一番恐れているのはそのことなのだ。あるときリコが自らの過去を思い出して、今の生活よりも大切な思い出や、希海よりもずっと大切だった人のことを思い出してしまったら。そのとき自分は、リコは一体どうするのだろう。
 「希海さん」
 　知らずと握りしめていた拳。そんな希海の手に、そっとあたたかいものがかぶさった。
-「私は、今とっても幸せです。希海さんと一緒にどこかへ出かけたり、希海さんと一緒に勉強をしたり、そんな風に誰かと一緒に色んなことをできるのが、とっても幸せなんです。だから私は希海さんのことを放って、どこかへ行ったりなんてしませんよ」
+「私は、今とっても幸せです。希海さんと一緒にどこかへ出かけたり、希海さんと一緒に勉強をしたり、そんな風に誰かと一緒に色んなことをできるのが、とっても幸せなんです。だから私は、希海さんのことを放ってどこかへ行ったりなんてしません」
 　リコはそう言って目を細めた。幸せを噛みしめるような柔らかくて優しい微笑み。手のひらに伝わる温かい感触。瞳の奥にきらめく一輪の虹。その虹を見ていると、希海の中にある一つの衝動が湧き上がった。
 「…………あ、あのさ」
 　――言ってしまいたい。
