--- a/hardproblem/3-03.html
+++ b/hardproblem/3-03.html
@@ -35,7 +35,7 @@
 「はい、その失恋です」
 　希海が受けた説明によると、オーナーは<ruby>千霧<rp>(</rp><rt>ちぎり</rt><rp>)</rp></ruby>区にある個人商店の店主で、なかなか後を継ごうとしない息子に代わって店を手伝ってもらおうとアンドロイドを購入したらしい。番頭として彼の仕事を手伝っていた小春は、仕事を通じて一人の女の子と知り合いになった。近くの高校に通う女子生徒で、その店にもよく顔を出す常連だったとのことだ。
 　女の子が来るたびに、小春は嬉しそうに彼女と話をした。彼女が店に訪れたときの小春の喜び方は尋常ではなく、仕事そっちのけで女の子と会話をしていることも多々あったそうである。最初のうちは細かく注意していたオーナーだったが、女の子と楽しそうに話す小春の表情にピンときたらしく、最近では女の子が来ると自分が店番をしていたという。
-「そしてある朝、小春くんは目覚めなくなりました。その前日、夜遅く外出先から帰った小春くんは非常に落ち込んだ様子だったそうです。出掛ける際にはその女子生徒と合ってくると漏らしていたそうなので、おそらく、直接会って思いの丈を伝えたのでしょう。そしてあまり良い振られ方をしなかった。帰りが遅くなったことをきつく叱ったというオーナーの話もありますし、失恋のショックと叱られたショックで精神の抵抗力が落ちていたんでしょうね。個体差はありますが第4世代は精神的にまだ幼いところもありますし、ある意味仕方がないことなのかも知れません」
+「そしてある朝、小春くんは目覚めなくなりました。その前日、夜遅く外出先から帰った小春くんは非常に落ち込んだ様子だったそうです。出掛ける際にはその女子生徒と会ってくると漏らしていたそうなので、おそらく、直接会って思いの丈を伝えたのでしょう。そしてあまり良い振られ方をしなかった。帰りが遅くなったことをきつく叱ったというオーナーの話もありますし、失恋のショックと叱られたショックで精神の抵抗力が落ちていたんでしょうね。個体差はありますが第4世代は精神的にまだ幼いところもありますし、ある意味仕方がないことなのかも知れません」
 　男は目を伏せ小さく息を落とす。
 「以上が我々の把握しているところです。何か質問はありますか」
 　ロボットが恋愛感情を抱くんですか？　そんな疑問が頭に浮かんだが、患者の治療にあまり関係することとは思えない。希海は黙して首を横に振った。
