ルビ間違いの修正

--- a/hardproblem/2-03.html
+++ b/hardproblem/2-03.html
@@ -39,7 +39,7 @@
 　当初は水着くらいしか持ってくるつもりはなかったが、あれもこれもと詰め込んでいるうちに随分と重たくなってしまった。流石にスイカは持ってこなかったものの、ゴーグルにシュノーケルに折りたたみの椅子。浮き輪に日焼け止めと盛りだくさんである。
 「あっ、代わりますよ」
 「いや、まだ大丈夫……だと思う。しんどくなったら代わってもらうから、そのときはよろしくね」
-　電車が駅に着くと、ふたりは荷物を抱えていそいそと席を離れた。タラップを慎重に降りてホームに降り立つと、濃厚な夏の気配が出迎えてくれる。クーラーに慣れた体を溶かすようなべっとりとまとわりつく熱気に、ジワジワと降り注いでは耳鳴りのように反響する蝉の声。鼻孔に感じる<ruby>微<rp>(</rp><rt>かすか</rt><rp>)</rp></ruby>かな磯の香りが、否が応にも海の近さを実感させてくれた。
+　電車が駅に着くと、ふたりは荷物を抱えていそいそと席を離れた。タラップを慎重に降りてホームに降り立つと、濃厚な夏の気配が出迎えてくれる。クーラーに慣れた体を溶かすようなべっとりとまとわりつく熱気に、ジワジワと降り注いでは耳鳴りのように反響する蝉の声。鼻孔に感じる<ruby>微<rp>(</rp><rt>かす</rt><rp>)</rp></ruby>かな磯の香りが、否が応にも海の近さを実感させてくれた。
 「<ruby>暑<rp>(</rp><rt>あっつ</rt><rp>)</rp></ruby>……」
 　肌を焼く強烈な日光に、一分と待たずして汗が吹き出てくる。
 「ところでさ」
