情景描写を加筆

--- a/hardproblem/4-05.html
+++ b/hardproblem/4-05.html
@@ -25,13 +25,16 @@
 　希海の心は日に日に追い詰められ、学校を休みがちになった。そしてある日、悔しさで枕を濡らしながら眠りについた後、気づけばこの場所に来ていたのだ。
 （ひょっとして……）
 　私はまたこの場所へ戻ってきてしまったのだろうか？
-　いや、その答えは否だ。もし希海が閉律症を患ってしまったのなら、この目の前の少女の存在は一体何なのだ。それに<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>は？　今ここに立っている自分の肩口には何も見えないばかりか、肝心の<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>はその主を守るかのように、膝を抱えうずくまる少女の周りを悲しそうに漂っている。形は両の手に乗るくらいの金属の箱。希海が昔持っていたオルゴールである。箱の上では小さな<ruby>人形<rp>(</rp><rt>ひとがた</rt><rp>)</rp></ruby>をした装飾が、音楽に合わせてくるくると踊っていた。
+　いや、その答えは否だ。もし希海が閉律症を患ってしまったのなら、この目の前の少女の存在は一体何なのだ。それに<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>は？　今ここに立っている自分の肩口には何も見えないばかりか、肝心の<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>はその主を守るかのように、膝を抱えうずくまる少女の周りを悲しそうに漂っている。形は両の手に乗るくらいの金属の箱。希海が昔持っていたオルゴールである。その金色の箱から奏でられるメロディは単調で懐かしく、そしてどこか切ない。音楽はまるで始まりも終わりも知らぬかのようにいつまでもいつまでも続いており、箱の上では小さな<ruby>人形<rp>(</rp><rt>ひとがた</rt><rp>)</rp></ruby>をした装飾がそれに合わせてくるくると踊っていた。
 　ああ、そうだ。
 　希海は思い出す。いつからか思うようになっていたこと。自分の中にあまりにも深く根ざしすぎて、いつの間にかその始まりを忘れてしまっていたこと。
 　――機械になりたい
 　このとき、はじめてそう思ったのだった。
-　機械ならば怖いなんて思わない。筋の通らないいじめなんて気にせず毎日ちゃんと学校へ行ける。親友の裏切りも『仕方ないさ』と笑って許せる。心臓を引き裂くような辛いことも、まぶたを腫らす悲しいことも、機械にならばみんな忘れられる。
-　しんしんと降りしきる雪。すべての熱を奪い去り、すべての心すらも覆い隠すような静寂があたりを包み込む。機械になりたいって、思った。いまでもそう思ってる。
+　機械ならば怖いなんて思わない。筋の通らないいじめなんて気にせず毎日ちゃんと学校へ行ける。親友の裏切りも『仕方ないさ』と笑って許せる。心臓を引き裂くような辛いことも、まぶたを腫らす悲しいことも、機械になればみんな忘れられる。
+　希海はそのあとしばらく、何もせずその場に立ち尽くし、場を満たす空気の冷たさと、オルゴールの音色に浸っていた。いずれこの夢も覚める。そうすればまた当時と同じどうしようもない世界で泣いたり笑ったりしながら生きていかないといけない。ならば今くらいは、こうして憧憬に沈んでいたって良いだろう。
+　しんしんと降りしきる雪。すべての熱を奪い去り、すべての心すらも覆い隠すような空気があたりを包み込む。
+　機械になりたいって、思った。
+　いまでもそう思ってる。
 </div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
