文フリ参加通知を追加

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
       </tr>
     </tbody>
   </table>
-   
+
+  <div class="information">
+    <a href="http://bunfree.net/?19th_bun" target="_blank">第十九回文学フリマ</a>にお呼ばれで参加します。<br>
+    当日は自分も来場する予定なので<br>
+    南正太郎を目撃したい方はどうぞお立ち寄りください。<br>
+    サークルページは<a href="http://dark-constexpr.github.io/" target="_blank">こちら</a>。詳細は追ってご報告いたします。<br>
+  </div>
+  
 </body>
 </html>
