test of twitter cards

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
+  <meta name="twitter:card" content="photo"><meta name="twitter:site" content="@mayuragicenter"><meta name="twitter:creator" content="@pasberth"><meta name="twitter:title" content="ふたりのハードプロブレム"><meta name="twitter:image:src" content="http://minamichihaya.github.io/img/hpot_logo.jpg"><meta name="twitter:domain" content="http://minamichihaya.github.io"><meta name="twitter:app:name:iphone" content=""><meta name="twitter:app:name:ipad" content=""><meta name="twitter:app:name:googleplay" content=""><meta name="twitter:app:url:iphone" content=""><meta name="twitter:app:url:ipad" content=""><meta name="twitter:app:url:googleplay" content=""><meta name="twitter:app:id:iphone" content=""><meta name="twitter:app:id:ipad" content=""><meta name="twitter:app:id:googleplay" content="">
   <link rel="stylesheet" type="text/css" href="desktop.css" />
   <link rel="stylesheet" type="text/css" href="portrait.css" />
   <link rel="stylesheet" type="text/css" href="landscape.css" />
