--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -7,7 +7,7 @@
   <meta name="twitter:creator" content="pasberth">
   <meta name="twitter:title" content="ふたりのハードプロブレム">
   <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/hpot_logo.jpg">
-  <meta name="twitter:domain" content="">
+  <meta name="twitter:domain" content="minamichihaya.github.io">
   <meta name="twitter:app:name:iphone" content="">
   <meta name="twitter:app:name:ipad" content="">
   <meta name="twitter:app:name:googleplay" content="">
