--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -6,7 +6,7 @@
   <meta name="twitter:site" content="mayuragicenter">
   <meta name="twitter:creator" content="pasberth">
   <meta name="twitter:title" content="ふたりのハードプロブレム">
-  <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/hpot_logo.jpg">
+  <meta name="twitter:image:src" content="https://dl.dropboxusercontent.com/u/125933124/hpot_logo.jpg">
   <meta property="twitter:image:width" content="274">
   <meta property="twitter:image:height" content="97">
   <meta name="twitter:domain" content="minamichihaya.github.io">
