photo がダメなら summary で

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -2,14 +2,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-  <meta name="twitter:card" content="photo">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="mayuragicenter">
-  <meta name="twitter:creator" content="pasberth">
   <meta name="twitter:title" content="ふたりのハードプロブレム">
-  <meta name="twitter:image:src" content="https://dl.dropboxusercontent.com/u/125933124/hpot_logo.jpg">
-  <meta property="twitter:image:width" content="274">
-  <meta property="twitter:image:height" content="97">
-  <meta name="twitter:domain" content="minamichihaya.github.io">
+  <meta name="twitter:description" content=" 機械になりたい、って思った。 いまでもそう思ってる。">
+  <meta name="twitter:creator" content="pasberth">
+  <meta name="twitter:image:src" content="">
+  <meta name="twitter:domain" content="http://minamichihaya.github.io">
   <meta name="twitter:app:name:iphone" content="">
   <meta name="twitter:app:name:ipad" content="">
   <meta name="twitter:app:name:googleplay" content="">
@@ -19,9 +18,6 @@
   <meta name="twitter:app:id:iphone" content="">
   <meta name="twitter:app:id:ipad" content="">
   <meta name="twitter:app:id:googleplay" content="">
-  <link rel="stylesheet" type="text/css" href="desktop.css" />
-  <link rel="stylesheet" type="text/css" href="portrait.css" />
-  <link rel="stylesheet" type="text/css" href="landscape.css" />
   <title>ふたりのハードプロブレム</title>
   <link rel="shortcut icon" href="../img/icon_hpot.png" type="image/png">
 </head>
