--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -7,7 +7,7 @@
   <meta name="twitter:title" content="ふたりのハードプロブレム">
   <meta name="twitter:description" content=" 機械になりたい、って思った。 いまでもそう思ってる。">
   <meta name="twitter:creator" content="pasberth">
-  <meta name="twitter:image:src" content="">
+  <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/hpot_logo.jpg">
   <meta name="twitter:domain" content="http://minamichihaya.github.io">
   <meta name="twitter:app:name:iphone" content="">
   <meta name="twitter:app:name:ipad" content="">
