最悪なことしてる

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -18,6 +18,9 @@
   <meta name="twitter:app:id:iphone" content="">
   <meta name="twitter:app:id:ipad" content="">
   <meta name="twitter:app:id:googleplay" content="">
+  <link rel="stylesheet" type="text/css" href="desktop.css" />
+  <link rel="stylesheet" type="text/css" href="portrait.css" />
+  <link rel="stylesheet" type="text/css" href="landscape.css" />
   <title>ふたりのハードプロブレム</title>
   <link rel="shortcut icon" href="../img/icon_hpot.png" type="image/png">
 </head>
