--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -2,13 +2,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
-
-  <meta name="twitter:card" content="photo">
-  <meta name="twitter:site" content="@mayuragicenter">
-  <meta name="twitter:creator" content="@pasberth">
-  <meta name="twitter:title" content="ふたりのハードプロブレム">
-  <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/hpot_logo.jpg">
+  <meta name="twitter:card" content="summary">
   <meta name="twitter:domain" content="minamichihaya.github.io">
+  <meta name="twitter:site" content="mayuragicenter">
+  <meta name="twitter:creator" content="pasberth">
+  <meta name="twitter:title" content="ふたりのハードプロブレム">
+  <meta name="twitter:description" content=" 機械になりたい、って思った。 いまでもそう思ってる。">
+  <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/hpot_logo.jpg">
   <meta name="twitter:app:name:iphone" content="">
   <meta name="twitter:app:name:ipad" content="">
   <meta name="twitter:app:name:googleplay" content="">
