--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" />
 
   <meta name="twitter:card" content="photo">
-  <meta name="twitter:site" content="mayuragicenter">
-  <meta name="twitter:creator" content="pasberth">
+  <meta name="twitter:site" content="@mayuragicenter">
+  <meta name="twitter:creator" content="@pasberth">
   <meta name="twitter:title" content="ふたりのハードプロブレム">
   <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/hpot_logo.jpg">
   <meta name="twitter:domain" content="minamichihaya.github.io">
