Twitter Card の画像を 4:3 比に変更

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -8,7 +8,7 @@
   <meta name="twitter:creator" content="pasberth">
   <meta name="twitter:title" content="ふたりのハードプロブレム">
   <meta name="twitter:description" content=" 機械になりたい、って思った。 いまでもそう思ってる。">
-  <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/hpot_logo.jpg">
+  <meta name="twitter:image:src" content="http://minamichihaya.github.io/img/twittercard.png">
   <meta name="twitter:app:name:iphone" content="">
   <meta name="twitter:app:name:ipad" content="">
   <meta name="twitter:app:name:googleplay" content="">
