リンクページ復活

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </tr>
       <tr>
         <td><a href="http://github.com/minamichihaya" target="_blank">GitHub</a></td>
-        <td><s>リンク</s></td>
+        <td><a href="link.html">リンク</a></td>
       </tr>
     </tbody>
   </table>
