--- a/link.html
+++ b/link.html
@@ -13,13 +13,15 @@
     <a href="../"><img src="img/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
+  <div class="linktop">
+  真揺中心のバナーは<a href="img/banner/mayuragicenter_banner.png" target="_blank">こちら</a>。ハドプレのバナーは<a href="img/banner/hpot_banner.png" target="_blank">こちら</a>。
+  </div>
   
   <table class="link">
-    <caption>真揺中心のバナーは<a href="img/banner/mayuragicenter_banner.png" target="_blank">こちら</a>。ハドプレのバナーは<a href="img/banner/hpot_banner.png" target="_blank">こちら</a>。</caption>
     <tbody>
       <tr>
         <td class="banner"><a href="http://dark-constexpr.github.io/" target="_blank"><img src="img/banner/dark-constexpr-bunner.gif"></a></td>
-        <td class="banner"><a href="http://pasberth.github.io/" target="_blank">pasberth.github.io</a></td>
+        <td class="nobanner"><a href="http://pasberth.github.io/" target="_blank">pasberth.github.io</a></td>
         <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="img/banner/Map-labo-banner002.png"></a></td>
       </tr>
       <tr>
