--- a/link.html
+++ b/link.html
@@ -22,9 +22,10 @@
       <tr>
         <td class="banner"><a href="http://dark-constexpr.github.io/" target="_blank"><img src="img/banner/dark-constexpr-bunner.gif"></a></td>
         <td class="nobanner"><a href="http://pasberth.github.io/" target="_blank">pasberth.github.io</a></td>
-        <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="img/banner/Map-labo-banner002.png"></a></td>
+        <td class="nobanner"><a href="http://fairytale.github.io/ss/" target="_blank">fairytale.github.io/ss</a></td>
       </tr>
       <tr>
+        <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="img/banner/Map-labo-banner002.png"></a></td>
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="img/banner/bana-2.jpg"></a></td>
       </tr>
   </table>
