--- a/link.html
+++ b/link.html
@@ -22,17 +22,19 @@
       <tr>
         <td class="banner"><a href="http://dark-constexpr.github.io/" target="_blank"><img src="img/banner/dark-constexpr-bunner.gif"></a></td>
         <td class="nobanner"><a href="http://www.boleros.x0.com/" target="_blank"><span class="pbanner">Bolero's website</span></a></td>
-        <td class="nobanner"><a href="http://pasberth.github.io/" target="_blank"><span class="pbanner">pasberth.github.io</span></a></td>
+        <td class="banner"><a href="http://www.boleros.x0.com/novel/or_my_research_project/" target="_blank"><img src="img/banner/or_my_research_project_banner.png"></a></td>
       </tr>
       <tr>
+        <td class="nobanner"><a href="http://www.ifurai.jp/" target="_blank"><span class="pbanner">猪風来美術館</span></a></td>
+        <td class="nobanner"><a href="http://pasberth.github.io/" target="_blank"><span class="pbanner">pasberth.github.io</span></a></td>
         <td class="nobanner"><a href="http://fairytale.github.io/ss/" target="_blank"><span class="pbanner">fairytale.github.io/ss</span></a></td>
+      </tr>
+      <tr>
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="img/banner/bana-2.jpg"></a></td>
         <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="img/banner/Souzoumap-banner003.png"></a></td>
       </tr>
   </table>
-  
-  
-  
+
 
   <div class="back">
     <a href="../">戻る</a>
