リンクに自サイトバナーを追加

--- a/link.html
+++ b/link.html
@@ -13,10 +13,16 @@
     <a href="../"><img src="img/sitelogo.jpg" alt="真揺中心ロゴ"></a>
   </div>
   
-  <div class="linktop">
-  真揺中心のバナーは<a href="img/banner/mayuragicenter_banner.png" target="_blank">こちら</a>。ハドプレのバナーは<a href="img/banner/hpot_banner.png" target="_blank">こちら</a>。
-  </div>
   
+  <table class="linktop">
+    <tbody>
+      <tr>
+        <td class="banner"><a href="../" target="_blank"><img src="img/banner/mayuragicenter_banner.png"></a></td>
+        <td class="banner"><a href="hardproblem" target="_blank"><img src="img/banner/hpot_banner.png"></a></td>
+      </tr>
+    </tbody>
+  </table>
+
   <table class="link">
     <tbody>
       <tr>
@@ -33,6 +39,7 @@
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="img/banner/bana-2.jpg"></a></td>
         <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="img/banner/Souzoumap-banner003.png"></a></td>
       </tr>
+    </tbody>
   </table>
 
 
