リンクに文フリサイトを追加

--- a/link.html
+++ b/link.html
@@ -17,8 +17,8 @@
   <table class="linktop">
     <tbody>
       <tr>
-        <td class="banner"><a href="../" target="_blank"><img src="img/banner/mayuragicenter_banner.png"></a></td>
-        <td class="banner"><a href="hardproblem" target="_blank"><img src="img/banner/hpot_banner.png"></a></td>
+        <td class="banner"><a href="../" target="_blank"><img src="banner/mayuragicenter_banner.png"></a></td>
+        <td class="banner"><a href="hardproblem" target="_blank"><img src="banner/hpot_banner.png"></a></td>
       </tr>
     </tbody>
   </table>
@@ -26,9 +26,9 @@
   <table class="link">
     <tbody>
       <tr>
-        <td class="banner"><a href="http://dark-constexpr.github.io/" target="_blank"><img src="img/banner/dark-constexpr-bunner.gif"></a></td>
+        <td class="banner"><a href="http://dark-constexpr.github.io/" target="_blank"><img src="banner/dark-constexpr-bunner.gif"></a></td>
         <td class="nobanner"><a href="http://www.boleros.x0.com/" target="_blank"><span class="pbanner">Bolero's website</span></a></td>
-        <td class="banner"><a href="http://www.boleros.x0.com/novel/or_my_research_project/" target="_blank"><img src="img/banner/or_my_research_project_banner.png"></a></td>
+        <td class="banner"><a href="http://www.boleros.x0.com/novel/or_my_research_project/" target="_blank"><img src="banner/or_my_research_project_banner.png"></a></td>
       </tr>
       <tr>
         <td class="nobanner"><a href="http://www.ifurai.jp/" target="_blank"><span class="pbanner">猪風来美術館</span></a></td>
@@ -36,8 +36,9 @@
         <td class="nobanner"><a href="http://fairytale.github.io/ss/" target="_blank"><span class="pbanner">fairytale.github.io/ss</span></a></td>
       </tr>
       <tr>
-        <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="img/banner/bana-2.jpg"></a></td>
-        <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="img/banner/Souzoumap-banner003.png"></a></td>
+        <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
+        <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="banner/Souzoumap-banner003.png"></a></td>
+        <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
       </tr>
     </tbody>
   </table>
