リンクにフジミさんのブログ追加

--- a/link.html
+++ b/link.html
@@ -36,8 +36,11 @@
         <td class="nobanner"><a href="http://fairytale.github.io/ss/" target="_blank"><span class="pbanner">fairytale.github.io/ss</span></a></td>
       </tr>
       <tr>
+        <td class="nobanner"><a href="http://ameblo.jp/i-was-genius" target="_blank"><span class="pbanner"><span class="shorten">サイレントマジョリティック窒息死</span></span></a></td>
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
         <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="banner/Souzoumap-banner003.png"></a></td>
+      </tr>
+      <tr>
         <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
       </tr>
     </tbody>
