--- a/link.html
+++ b/link.html
@@ -42,6 +42,13 @@
       </tr>
       <tr>
         <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
+        <td class="banner"><a href="http://syosetu.com/" target="_blank"><img src="banner/banner_narou.gif"></a></td>
+        <td class="nobanner"><a href="http://homepage3.nifty.com/jgrammar/ja/index.htm" target="_blank"><span class="pbanner"><span class="shorten">コラム統計計算文法考</span></span></a></td>
+      </tr>
+      <tr>
+        <td class="banner"><a href="https://github.com/" target="_blank"><img src="banner/github.png"></a></td>
+        <td></td>
+        <td class="banner"><a href="http://www.htmq.com/index.htm" target="_blank"><img src="banner/logo.gif"></a></td>
       </tr>
     </tbody>
   </table>
