--- a/link.html
+++ b/link.html
@@ -33,21 +33,21 @@
       <tr>
         <td class="nobanner"><a href="http://www.ifurai.jp/" target="_blank"><span class="pbanner">猪風来美術館</span></a></td>
         <td class="nobanner"><a href="http://pasberth.github.io/" target="_blank"><span class="pbanner">pasberth.github.io</span></a></td>
-        <td class="nobanner"><a href="http://fairytale.github.io/ss/" target="_blank"><span class="pbanner">fairytale.github.io/ss</span></a></td>
+        <td class="nobanner"><a href="http://fairytale.github.io/21st-century" target="_blank"><span class="pbanner"><span class="shorten">fairytale.github.io/21st-century</span></span></a></td>
       </tr>
       <tr>
+        <td class="nobanner"><a href="http://fairytale.github.io/ss/" target="_blank"><span class="pbanner">fairytale.github.io/ss</span></a></td>
         <td class="nobanner"><a href="http://ameblo.jp/i-was-genius" target="_blank"><span class="pbanner"><span class="shorten">サイレントマジョリティック窒息死</span></span></a></td>
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
-        <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="banner/Souzoumap-banner003.png"></a></td>
       </tr>
       <tr>
+        <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="banner/Souzoumap-banner003.png"></a></td>
         <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
         <td class="banner"><a href="http://syosetu.com/" target="_blank"><img src="banner/banner_narou.gif"></a></td>
-        <td class="nobanner"><a href="http://homepage3.nifty.com/jgrammar/ja/index.htm" target="_blank"><span class="pbanner"><span class="shorten">コラム統計計算文法考</span></span></a></td>
       </tr>
       <tr>
+        <td class="nobanner"><a href="http://homepage3.nifty.com/jgrammar/ja/index.htm" target="_blank"><span class="pbanner"><span class="shorten">コラム統計計算文法考</span></span></a></td>
         <td class="banner"><a href="https://github.com/" target="_blank"><img src="banner/github.png"></a></td>
-        <td></td>
         <td class="banner"><a href="http://www.htmq.com/index.htm" target="_blank"><img src="banner/logo.gif"></a></td>
       </tr>
     </tbody>
