文フリ告知文を更新

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <a href="http://bunfree.net/?19th_bun" target="_blank">第十九回文学フリマ</a>にお呼ばれで参加します。<br>
     当日は自分も来場する予定なので<br>
     南正太郎を目撃したい方はどうぞお立ち寄りください。<br>
-    サークルページは<a href="http://dark-constexpr.github.io/" target="_blank">こちら</a>。詳細は追ってご報告いたします。<br>
+    サークルページは<a href="http://dark-constexpr.github.io/" target="_blank">こちら</a>。<br>
+  　ブースは<a href="https://t.co/a61rmnx1LD" target="_blank">【Fホール(2F) イ-67】</a>です。
   </div>
   
 </body>
