ハドプレ表紙を表示する

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -25,9 +25,8 @@
   <link rel="shortcut icon" href="../img/icon_hpot.png" type="image/png">
 </head>
 <body id="page">
-  <div v-component="hpot-main-header"></div>
-
-  <div class="contents">
+  <div id="main-contents" class="contents">
+    <img class="hpot-cover" src="../img/hpot_title2.png" />
     <div id="main-hpot-index" v-component="hpot-index"></div>
   </div>
 </body>
