--- a/hardproblem/2-01.html
+++ b/hardproblem/2-01.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="portrait.css" />
   <link rel="stylesheet" type="text/css" href="landscape.css" />
   <title>ふたりのハードプロブレム</title>
-  <link rel="shortcut icon" href="../img/icon_hpot.png" type="image/png">
+  <link rel="shortcut icon" href="../img/icon_hardproblem.png" type="image/png">
 </head>
 <body id="page">
   <div v-component="hpot-page-header"></div>
