扉絵のロゴ変えた

--- a/hardproblem/2-01.html
+++ b/hardproblem/2-01.html
@@ -13,7 +13,7 @@
 
   <div class="contents">
     <div class="logo hpot-sect2-logo">
-      <img src="../img/hpot2.jpg" />
+      <img src="../img/section2.png" />
     </div>
 
 <div class="text">
