--- a/hardproblem/1-01.html
+++ b/hardproblem/1-01.html
@@ -13,7 +13,7 @@
 
   <div class="contents">
 <div class="logo hpot-sect1-logo">
-  <img src="../img/hpot1.jpg" />
+  <img src="../img/section1.png" />
 </div>
 
 <div class="text">
