--- a/hardproblem/3-01.html
+++ b/hardproblem/3-01.html
@@ -13,7 +13,7 @@
 
   <div class="contents">
 <div class="logo hpot-sect3-logo">
-  <img src="../img/hpot3.jpg" />
+  <img src="../img/section3.png" />
 </div>
 
 <div class="text">
