タイトルページのレイアウト変更

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -28,7 +28,7 @@
   <div v-component="hpot-main-header"></div>
 
   <div id="main-contents" class="contents">
-    <img class="hpot-cover" src="../img/hpot_title2.png" />
+    <img class="hpot-cover" src="../img/title1.png" />
     <div id="main-hpot-index" v-component="hpot-index"></div>
   </div>
 </body>
