フォントをメイリオに戻してレイアウト変更

--- a/hardproblem/1-06.html
+++ b/hardproblem/1-06.html
@@ -38,7 +38,7 @@
 　そう言って歩き出そうとする希海だが、東は立ち止まったまま動こうとしない。希海が声を掛けようと口を開きかけた瞬間。
 「タバコ、1本もらえるかね」
 　喫煙所に二人して入った。希海がズボンの後ろポケットからタバコを取り出すと、その赤一色のパッケージを見た東が「おっ」と声を上げた。
-「『<span class=simplified><ruby>红天演<rp>(</rp><rt>こうてんえん</rt><rp>)</rp></ruby></span>』とはずいぶん渋いね」
+「『<ruby><span class="simplified">红天演</span><rp>(</rp><rt>こうてんえん</rt><rp>)</rp></ruby>』とはずいぶん渋いね」
 「……ほっといて下さい」
 　西部解放まもない頃に販売が開始された、いわゆるオッサンタバコである。近頃では若い人はおろか年配の人ですら吸っているのを見かけないが。
 「どうぞ」
