--- a/hardproblem/1-04.html
+++ b/hardproblem/1-04.html
@@ -71,10 +71,10 @@
 「大丈夫だから！　戻らないから！」
 　女の子を洗面所に押し返し、受け取った携帯端末の液晶パネルに目を落とした。製品情報はご丁寧にも中日韓越英の5ヶ国語で書かれており、希海はその中の日本語で書かれた部分に画面をスクロールさせる。
 
-　<span class=simplified>型番</span> : SUM17F4JP1698
-　<span class=simplified>制造番号</span> : 09-130221-0802-000
-　<span class=simplified>制造・贩卖</span> : <span class=simplified>上海人偶机器人工学有限公司近畿支店</span>
-　カスタマーサポート : 0120-XXX-XXX (24<span class=simplified>时间</span>)
+　<span class="simplified">型番</span> : SUM17F4JP1698
+　<span class="simplified">制造番号</span> : 09-130221-0802-000
+　<span class="simplified">制造・贩卖</span> : <span class="simplified">上海人偶机器人工学有限公司近畿支店</span>
+　カスタマーサポート : 0120-XXX-XXX (24<span class="simplified">时间</span>)
 
 　ビンゴ。ウェブで検索するまでもなく電話番号まで載っていた。しかも、ありがたいことにフリーダイヤルである。
 「どうでしたか？」
