用語の細かい変更

--- a/hardproblem/3-03.html
+++ b/hardproblem/3-03.html
@@ -133,7 +133,7 @@
 　希海のすぐ上、手を伸ばせば届きそうな位置で、石はぴたりとその動きを止めていた。
 「よっ……と」
 　希海が空き缶を背後に放り投げるような仕草をすると、石はそれに従って後ろへと飛んでいく。石はそのまま誰もいない道路に叩きつけられ、乾いた音が再び住宅街にこだました。
-　過去に閉律症を患った者の中には、その特殊な力を他者の精神空間上においても発揮できる人間が少なからずいる。割合は患者全体の30%ほど。多くは30代前後でその能力を失ってしまうものの、感受性の高い10代の間は自らの精神空間上とほぼ変わらない形での行使が可能だ。そしてこの体質を用いて患者の精神を閉鎖空間から連れ戻すのが、他ならぬ精神医療従事者の仕事であった。
+　過去に閉律症を患った者の中には、その特殊な力を他者の精神空間上においても発揮できる人間が少なからずいる。割合は患者全体の30%ほど。多くは30代前後でその能力を失ってしまうものの、<ruby>虚 想 受 容 性<rp>(</rp><rt>ネガティブ・ケイパビリティ</rt><rp>)</rp></ruby>の高い10代の間は自らの精神空間上とほぼ変わらない形での行使が可能だ。そしてこの体質を用いて患者の精神を閉鎖空間から連れ戻すのが、他ならぬ精神医療従事者の仕事であった。
 「私だってドンパチはやりたくない。だからお願い、落ち着いて」
 　少年の顔に困惑が広がった。だがそれもつかの間、強い決意とわずかな憎しみが、再び虹を閉じ込めた瞳に宿りはじめる。
 　小春に二言はなかった。
