wiktionaryのバナーがよく見たらドイツ語版だった

--- a/link.html
+++ b/link.html
@@ -52,7 +52,7 @@
       </tr>
       <tr>
         <td class="banner"><a href="http://ja.wikipedia.org/wiki/%E3%83%A1%E3%82%A4%E3%83%B3%E3%83%9A%E3%83%BC%E3%82%B8" target="_blank"><img src="banner/Lemon_wiki_banner.jpg"></a></td>
-        <td class="banner"><a href="http://en.wiktionary.org/wiki/Wiktionary:Main_Page" target="_blank"><img src="banner/LeoDaV-Banner_234x60.jpg"></a></td>
+        <td class="nobanner"><a href="http://en.wiktionary.org/wiki/Wiktionary:Main_Page" target="_blank"><span class="pbanner">Wiktionary</span></a></td>
         <td class="nobanner"><a href="http://homepage3.nifty.com/jgrammar/ja/index.htm" target="_blank"><span class="pbanner">コラム統計計算文法考</span></a></td>
       </tr>
       <tr>
