MIDI遊びのページ復活

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <td><a href="picture.html">ヘタレ絵</a></td>
       </tr>
       <tr>
-      	<td><s>MIDI遊び</s></td>
+      	<td><a href="music.html">MIDI遊び</a></td>
       	<td><a href="http://twitter.com/mayuragicenter" target="_blank">Twitter</td>
       </tr>
       <tr>
