私に構ってください

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       </tr>
       <tr>
         <td><a href="http://mypage.syosetu.com/273349/" target="_blank">なろう</a></td>
-        <td><a href="http://book.akahoshitakuya.com/u/342349" target="_blank">読書メーター</a></td>
+        <td><a href="http://ask.fm/mayuragicenter" target="_blank">Ask.fm</a></td>
       </tr>
       <tr>
-        <td><a href="http://github.com/minamichihaya" target="_blank">GitHub</a></td>
+        <td><a href="http://book.akahoshitakuya.com/u/342349" target="_blank">読書メーター</a></td>
         <td><a href="link.html">リンク</a></td>
       </tr>
     </tbody>
