--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" type="text/css" href="landscape.css" />
   <title>ふたりのハードプロブレム</title>
   <link rel="shortcut icon" href="../img/icon_hardproblem.png" type="image/png">
+  <link rel="stylesheet" type="text/css" href="../fonts/meiryo.css" id="fontsets">
 </head>
 <body id="page">
   <div v-component="hpot-main-header"></div>
