イベントページを追加

--- a/index.html
+++ b/index.html
@@ -17,17 +17,16 @@
       <tr>
         <td><a href="novel.html">ライトなノベル</a></td>
         <td><a href="picture.html">ヘタレ絵</a></td>
-      </tr>
-      <tr>
       	<td><a href="music.html">MIDI遊び</a></td>
-      	<td><a href="http://twitter.com/mayuragicenter" target="_blank">Twitter</td>
       </tr>
       <tr>
-        <td><a href="http://mypage.syosetu.com/273349/" target="_blank">なろう</a></td>
-        <td><a href="http://ask.fm/mayuragicenter" target="_blank">Ask.fm</a></td>
+      	<td><a href="http://twitter.com/mayuragicenter" target="_blank">Twitter</td>
+        <td><a href="http://mypage.syosetu.com/273349/" target="_blank">小説家になろう</a></td>
+        <td><a href="http://ask.fm/mayuragicenter" target="_blank">ask.fm</a></td>
       </tr>
       <tr>
         <td><a href="http://book.akahoshitakuya.com/u/342349" target="_blank">読書メーター</a></td>
+        <td><a href="event.html">イベント</a></td>
         <td><a href="link.html">リンク</a></td>
       </tr>
     </tbody>
