--- a/link.html
+++ b/link.html
@@ -14,53 +14,109 @@
   </div>
   
   
-  <table class="linktop">
-    <tbody>
-      <tr>
-        <td class="banner"><a href="../" target="_blank"><img src="banner/mayuragicenter_logo.png"></a></td>
-        <td class="banner"><a href="hardproblem" target="_blank"><img src="banner/hardproblem_logo.png"></a></td>
-      </tr>
-    </tbody>
-  </table>
-
+  <div class="link_category">小説</div>
   <table class="link">
     <tbody>
       <tr>
         <td class="banner"><a href="http://dark-constexpr.github.io/" target="_blank"><img src="banner/dark-constexpr-bunner.gif"></a></td>
-        <td class="nobanner"><a href="http://www.boleros.x0.com/" target="_blank"><span class="pbanner">Bolero's website</span></a></td>
         <td class="banner"><a href="http://www.boleros.x0.com/novel/or_my_research_project/" target="_blank"><img src="banner/or_my_research_project_banner.png"></a></td>
+        <td class="nobanner"><a href="http://fairytale.github.io/abstr/" target="_blank"><span class="pbanner">λ abstraction</span></a></td>
       </tr>
       <tr>
-        <td class="nobanner"><a href="http://www.ifurai.jp/" target="_blank"><span class="pbanner">猪風来美術館</span></a></td>
-        <td class="nobanner"><a href="http://pasberth.github.io/" target="_blank"><span class="pbanner">pasberth.github.io</span></a></td>
-        <td class="nobanner"><a href="http://fairytale.github.io/21st-century" target="_blank"><span class="pbanner"><span class="shorten">fairytale.github.io/21st-century</span></span></a></td>
-      </tr>
-      <tr>
-        <td class="nobanner"><a href="http://fairytale.github.io/ss/" target="_blank"><span class="pbanner">fairytale.github.io/ss</span></a></td>
-        <td class="nobanner"><a href="http://ameblo.jp/i-was-genius" target="_blank"><span class="pbanner"><span class="shorten">サイレントマジョリティック窒息死</span></span></a></td>
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
+        <td class="nobanner"><a href="http://estar.jp/.pc/user/U2FsdGVkX18xXOTc5MDkyNvuxPNonyBdZbNbCF4wVGRgA1/%E3%83%93%E3%83%83%E3%82%AF%E3%83%AA%E7%AE%B1" target="_blank"><span class="pbanner">ビックリ箱</span></a></td>
+　　　　　　　<td class="nobanner"><a href="https://fukurowl.booth.pm/" target="_blank"><span class="pbanner">梟流</span></a></td>
       </tr>
       <tr>
-        <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="banner/Souzoumap-banner003.png"></a></td>
-         <td class="nobanner"><a href="http://duxca.github.io/" target="_blank"><span class="pbanner">KAMO&NEGIS!</span></a></td>
         <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
-      </tr>
-      <tr>
         <td class="banner"><a href="http://syosetu.com/" target="_blank"><img src="banner/banner_narou.gif"></a></td>
-        <td class="banner"><a href="https://github.com/" target="_blank"><img src="banner/github.png"></a></td>
-        <td class="banner"><a href="http://www.htmq.com/index.htm" target="_blank"><img src="banner/logo.gif"></a></td>
+      </tr>
+    </tbody>
+  </table>
+  
+  <div class="link_category">漫画・イラスト</div>
+  <table class="link">
+    <tbody>
+      <tr>
+        <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
+        <td class="nobanner"><a href="http://duxca.github.io/" target="_blank"><span class="pbanner">KAMO&NEGIS!</span></a></td>
+        <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=4658416" target="_blank"><span class="pbanner">ハコ / SDT</span></a></td>
       </tr>
       <tr>
-        <td class="banner"><a href="http://ja.wikipedia.org/wiki/%E3%83%A1%E3%82%A4%E3%83%B3%E3%83%9A%E3%83%BC%E3%82%B8" target="_blank"><img src="banner/Lemon_wiki_banner.jpg"></a></td>
-        <td class="nobanner"><a href="http://en.wiktionary.org/wiki/Wiktionary:Main_Page" target="_blank"><span class="pbanner">Wiktionary</span></a></td>
-        <td class="nobanner"><a href="http://homepage3.nifty.com/jgrammar/ja/index.htm" target="_blank"><span class="pbanner">コラム統計計算文法考</span></a></td>
-      </tr>
-      <tr>
-        <td class="nobanner"><a href="http://www.weblio.jp/" target="_blank"><span class="pbanner">Weblio辞書</span></a></td>
+　　　　　　　<td class="nobanner"><a href="https://fukurowl.booth.pm/" target="_blank"><span class="pbanner">梟流</span></a></td>
+　　　　　　　<td class="nobanner"><a href="https://twitter.com/Kuramitsu_Kotsu" target="_blank"><span class="pbanner">暗参の絵垢</span></a></td>
+　　　　　　　<td class="nobanner"><a href="http://www.goldfishkingdom.client.jp/" target="_blank"><span class="pbanner">金魚王国の崩壊</span></a></td>
       </tr>
     </tbody>
   </table>
 
+  <div class="link_category">創作地図</div>
+  <table class="link">
+    <tbody>
+      <tr>
+        <td class="banner"><a href="http://www27.atpages.jp/souzoumap/" target="_blank"><img src="banner/Souzoumap-banner003.png"></a></td>
+        <td class="nobanner"><a href="http://shiosakicity.jimdo.com/" target="_blank"><span class="pbanner">塩咲市</span></a></td>
+        <td class="nobanner"><a href="http://kitakami7kouren.jimdo.com/" target="_blank"><span class="pbanner">蒼い雪国</span></a></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div class="link_category">プログラミング</div>
+  <table class="link">
+    <tbody>
+      <tr>
+        <td class="nobanner"><a href="http://www.boleros.x0.com/" target="_blank"><span class="pbanner">Bolero's website</span></a></td>
+        <td class="nobanner"><a href="http://duxca.github.io/" target="_blank"><span class="pbanner">KAMO&NEGIS!</span></a></td>
+        <td class="banner"><a href="https://github.com/" target="_blank"><img src="banner/github.png"></a></td>
+      </tr>
+      <tr>
+        <td class="banner"><a href="http://www.htmq.com/index.htm" target="_blank"><img src="banner/logo.gif"></a></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div class="link_category">その他</div>
+  <table class="link">
+    <tbody>
+      <tr>
+        <td class="nobanner"><a href="http://www.ifurai.jp/" target="_blank"><span class="pbanner">猪風来美術館</span></a></td>
+        <td class="nobanner"><a href="http://ameblo.jp/i-was-genius" target="_blank"><span class="pbanner"><span class="shorten">サイレントマジョリティック窒息死</span></span></a></td>
+        <td class="nobanner"><a href="http://kiiichi.blog.shinobi.jp/" target="_blank"><span class="pbanner">制作メモ</span></a></td>
+      </tr>
+      <tr>
+        <td class="nobanner"><a href="http://kiiiichi.sakura.ne.jp/yoake.html" target="_blank"><span class="pbanner">夜明けの口笛吹き</span></a></td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div class="link_category">便利サイト</div>
+  <table class="link">
+    <tbody>
+      <tr>
+        <td class="banner"><a href="https://github.com/" target="_blank"><img src="banner/github.png"></a></td>
+        <td class="banner"><a href="http://www.htmq.com/index.htm" target="_blank"><img src="banner/logo.gif"></a></td>
+        <td class="banner"><a href="http://ja.wikipedia.org/wiki/%E3%83%A1%E3%82%A4%E3%83%B3%E3%83%9A%E3%83%BC%E3%82%B8" target="_blank"><img src="banner/Lemon_wiki_banner.jpg"></a></td>
+      <tr>
+        <td class="nobanner"><a href="http://en.wiktionary.org/wiki/Wiktionary:Main_Page" target="_blank"><span class="pbanner">Wiktionary</span></a></td>
+        <td class="nobanner"><a href="http://www.weblio.jp/" target="_blank"><span class="pbanner">Weblio辞書</span></a></td>
+        <td class="nobanner"><a href="http://homepage3.nifty.com/jgrammar/ja/index.htm" target="_blank"><span class="pbanner">コラム統計計算文法考</span></a></td>
+      </tr>
+      <tr>
+        <td class="nobanner"><a href="http://mujina.sakura.ne.jp/history/" target="_blank"><span class="pbanner">市町村変遷パラパラ地図</span></a></td>
+      </tr>
+    </tbody>
+  </table>
+
+<div class="link_category">自サイトバナー</div>
+  <table class="link">
+    <tbody>
+      <tr>
+        <td class="banner"><a href="../" target="_blank"><img src="banner/mayuragicenter_logo.png"></a></td>
+        <td class="banner"><a href="hardproblem" target="_blank"><img src="banner/hardproblem_logo.png"></a></td>
+　　　　　　　<td></td>
+      </tr>
+    </tbody>
+  </table>
 
   <div class="back">
     <a href="../">戻る</a>
