トップページに乞食リスト追加

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
       </tr>
       <tr>
         <td><a href="http://book.akahoshitakuya.com/u/342349" target="_blank">読書メーター</a></td>
+        <td><a href="https://github.com/minamichihaya" target="_blank">GitHub</a></td>
+        <td><a href="http://www.amazon.co.jp/registry/wishlist/2JXRC6JN5HL1S" target="_blank">Wishlist</a></td>
+      </tr>
+      <tr>
         <td><a href="event.html">イベント</a></td>
+        <td></td>
         <td><a href="link.html">リンク</a></td>
       </tr>
     </tbody>
