リンクにas_capabl氏とちょまど氏のサイトを追加

--- a/link.html
+++ b/link.html
@@ -28,9 +28,10 @@
 　　　　　　　<td class="nobanner"><a href="https://fukurowl.booth.pm/" target="_blank"><span class="pbanner">梟流</span></a></td>
       </tr>
       <tr>
+　　　　　　　<td class="nobanner"><a href="http://as-capabl.hateblo.jp/" target="_blank"><span class="pbanner">Project German-style</span></a></td>
         <td class="banner"><a href="http://bunfree.net/" target="_blank"><img src="banner/bunfree_banner01.gif"></a></td>
         <td class="banner"><a href="http://syosetu.com/" target="_blank"><img src="banner/banner_narou.gif"></a></td>
-      </tr>
+　　　　　</tr>
     </tbody>
   </table>
   
@@ -48,6 +49,7 @@
 　　　　　　　<td class="nobanner"><a href="https://twitter.com/Kuramitsu_Kotsu" target="_blank"><span class="pbanner">暗参の絵垢</span></a></td>
       </tr>
       <tr>
+　　　　　　　<td class="nobanner"><a href="http://chomado.com/" target="_blank"><span class="pbanner">@chomado ちょまど帳</span></a></td>
 　　　　　　　<td class="nobanner"><a href="http://www.goldfishkingdom.client.jp/" target="_blank"><span class="pbanner">金魚王国の崩壊</span></a></td>
       </tr>
     </tbody>
@@ -70,9 +72,11 @@
       <tr>
         <td class="nobanner"><a href="http://www.boleros.x0.com/" target="_blank"><span class="pbanner">Bolero's website</span></a></td>
         <td class="nobanner"><a href="http://duxca.github.io/" target="_blank"><span class="pbanner">KAMO&NEGIS!</span></a></td>
-        <td class="banner"><a href="https://github.com/" target="_blank"><img src="banner/github.png"></a></td>
+　　　　　　　<td class="nobanner"><a href="http://as-capabl.hateblo.jp/" target="_blank"><span class="pbanner">Project German-style</span></a></td>
       </tr>
       <tr>
+　　　　　　　<td class="nobanner"><a href="http://chomado.com/" target="_blank"><span class="pbanner">@chomado ちょまど帳</span></a></td>
+　　　　　　　<td class="banner"><a href="https://github.com/" target="_blank"><img src="banner/github.png"></a></td>
         <td class="banner"><a href="http://www.htmq.com/index.htm" target="_blank"><img src="banner/logo.gif"></a></td>
       </tr>
     </tbody>
