--- a/index.html
+++ b/index.html
@@ -38,12 +38,10 @@
   </table>
 
   <div class="information">
-    <a href="http://bunfree.net/?19th_bun" target="_blank">第十九回文学フリマ</a>にお呼ばれで参加します。<br>
-    当日は自分も来場する予定なので<br>
-    南正太郎を目撃したい方はどうぞお立ち寄りください。<br>
-    サークルページは<a href="http://dark-constexpr.github.io/" target="_blank">こちら</a>。<br>
-  　ブースは<a href="https://t.co/a61rmnx1LD" target="_blank">【Fホール(2F) イ-67】</a>です。
-  </div>
+    暗黒定数式 Vol.1 - BOOTH（同人誌通販・ダウンロード）<br>
+     <a href="https://dark-constexpr.booth.pm/items/61500" target="_blank">https://dark-constexpr.booth.pm/items/61500</a><br>
+    暗黒定数式Vol.1の通販がもうすぐ始まります<br>
+    文フリで買い逃した方、行けなかった方はぜひぜひ。</div>
   
 </body>
 </html>
