--- a/picture.html
+++ b/picture.html
@@ -64,6 +64,7 @@
     <caption>いただきもの／コラボ</caption>
     <tbody>
       <tr>
+        <td><a href="picture/fm08.html"><img src="thumbnail/tn_fm08.jpg"></a></td>
         <td><a href="picture/fm07.html"><img src="thumbnail/tn_fm07.jpg"></a></td>
         <td><a href="picture/fm06.html"><img src="thumbnail/tn_fm06.jpg"></a></td>
         <td><a href="picture/fm05.html"><img src="thumbnail/tn_fm05.jpg"></a></td>
@@ -71,7 +72,6 @@
         <td><a href="picture/fm03.html"><img src="thumbnail/tn_fm03.jpg"></a></td>
         <td><a href="picture/fm02.html"><img src="thumbnail/tn_fm02.jpg"></a></td>
         <td><a href="picture/fm01.html"><img src="thumbnail/tn_fm01.jpg"></a></td>
-        <td></td>
       </tr>
     </tbody>
   </table>
