--- a/picture/fm04.html
+++ b/picture/fm04.html
@@ -18,7 +18,7 @@
   </div>
   
   <div class="picturetitle">
-    フィア(仮)（かいたひと：<a href="http://pasberth.github.io/" target="_blank">パスベルス</a>さん）
+    フィア(仮)（かいたひと：<a href="https://twitter.com/pasberth" target="_blank">パスベルス</a>さん）
   </div>
   
   <div class="caption">
