タイトルわすれてた

--- a/picture/fm10.html
+++ b/picture/fm10.html
@@ -22,7 +22,9 @@
   </div>
   
   <div class="caption">
-    演歌歌手らしいです。ふとももに顔うずめたいですね。
+    あなたの歌姫<br>
+    演歌歌手らしいです。<br>
+    ふとももに顔うずめたいですね。
   </div>
 
   <div class="back">
