--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <td><a href="http://ask.fm/mayuragicenter" target="_blank">ask.fm</a></td>
       </tr>
       <tr>
-        <td><a href="http://pixiv.me/mayuragicenter" target="_blank">Pixiv</a></td>
+        <td><a href="http://pixiv.me/mayuragicenter" target="_blank">pixiv</a></td>
         <td><a href="https://github.com/minamichihaya" target="_blank">GitHub</a></td>
         <td><a href="http://www.amazon.co.jp/registry/wishlist/2JXRC6JN5HL1S" target="_blank">Wishlist</a></td>
       </tr>
