アカウント名の後にサイト名を併記

--- a/link.html
+++ b/link.html
@@ -24,7 +24,7 @@
       </tr>
       <tr>
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
-        <td class="nobanner"><a href="http://estar.jp/.pc/user/U2FsdGVkX18xXOTc5MDkyNvuxPNonyBdZbNbCF4wVGRgA1/%E3%83%93%E3%83%83%E3%82%AF%E3%83%AA%E7%AE%B1" target="_blank"><span class="pbanner">ビックリ箱</span></a></td>
+        <td class="nobanner"><a href="http://estar.jp/.pc/user/U2FsdGVkX18xXOTc5MDkyNvuxPNonyBdZbNbCF4wVGRgA1/%E3%83%93%E3%83%83%E3%82%AF%E3%83%AA%E7%AE%B1" target="_blank"><span class="pbanner">ビックリ箱／エブリスタ</span></a></td>
 　　　　　　　<td class="nobanner"><a href="https://fukurowl.booth.pm/" target="_blank"><span class="pbanner">梟流</span></a></td>
       </tr>
       <tr>
@@ -46,11 +46,11 @@
       <tr>
         <td class="nobanner"><a href="http://yanagihatei.hatenablog.com/" target="_blank"><span class="pbanner">代名詞</span></a></td>
 　　　　　　　<td class="nobanner"><a href="https://fukurowl.booth.pm/" target="_blank"><span class="pbanner">梟流</span></a></td>
-　　　　　　　<td class="nobanner"><a href="https://twitter.com/Kuramitsu_Kotsu" target="_blank"><span class="pbanner">暗参の絵垢</span></a></td>
+　　　　　　　<td class="nobanner"><a href="https://twitter.com/Kuramitsu_Kotsu" target="_blank"><span class="pbanner">暗参の絵垢／Twitter</span></a></td>
       </tr>
       <tr>
 　　　　　　　<td class="nobanner"><a href="http://chomado.com/" target="_blank"><span class="pbanner">@chomado ちょまど帳</span></a></td>
-　　　　　　　<td class="nobanner"><a href="http://www.pixiv.net/member.php?id=10662" target="_blank"><span class="pbanner">れーちぇ</span></a></td>
+　　　　　　　<td class="nobanner"><a href="http://www.pixiv.net/member.php?id=10662" target="_blank"><span class="pbanner">れーちぇ／pixiv</span></a></td>
 　　　　　　　<td class="nobanner"><a href="http://www.goldfishkingdom.client.jp/" target="_blank"><span class="pbanner">金魚王国の崩壊</span></a></td>
       </tr>
     </tbody>
