ハコさんのpixivサイト名併記わすれてた

--- a/link.html
+++ b/link.html
@@ -41,7 +41,7 @@
       <tr>
         <td class="banner"><a href="http://kouno.zombie.jp/" target="_blank"><img src="banner/bana-2.jpg"></a></td>
         <td class="nobanner"><a href="http://duxca.github.io/" target="_blank"><span class="pbanner">KAMO&NEGIS!</span></a></td>
-        <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=4658416" target="_blank"><span class="pbanner">ハコ / SDT</span></a></td>
+        <td class="nobanner"><a href="http://www.pixiv.net/member.php?id=4658416" target="_blank"><span class="pbanner">ハコSDT／pixiv</span></a></td>
       </tr>
       <tr>
         <td class="nobanner"><a href="http://yanagihatei.hatenablog.com/" target="_blank"><span class="pbanner">代名詞</span></a></td>
