--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
   <div class="information">
     暗黒定数式 Vol.1 - BOOTH（同人誌通販・ダウンロード）<br>
      <a href="https://dark-constexpr.booth.pm/items/61500" target="_blank">https://dark-constexpr.booth.pm/items/61500</a><br>
-    暗黒定数式Vol.1の通販がもうすぐ始まります<br>
-    文フリで買い逃した方、行けなかった方はぜひぜひ。
+    暗黒定数式Vol.1の通販が始まりました！<br>
+    文フリ／コミケで買い逃した方、行けなかった方はぜひぜひ。
   </div>
   
 </body>
