キャプションをちょいと変更

--- a/picture/fm10.html
+++ b/picture/fm10.html
@@ -18,13 +18,13 @@
   </div>
   
   <div class="picturetitle">
-    <a href="../hardproblem/">リコ</a>（かいたひと：<a href="https://twitter.com/pasberth" target="_blank">パスベルス</a>さん）
+    あなたの歌姫（かいたひと：<a href="https://twitter.com/pasberth" target="_blank">パスベルス</a>さん）
   </div>
   
   <div class="caption">
-    あなたの歌姫<br>
-    演歌歌手らしいです。<br>
-    ふとももに顔うずめたいですね。
+    歌う<a href="../hardproblem/">リコ</a>。演歌歌手らしいです。<br>
+    ふとももに顔うずめたいですね。<br>
+    瞳の中の虹までちゃんと書き込んでくれてます。
   </div>
 
   <div class="back">
