嫁の絵着色

--- a/picture/fm13_.html
+++ b/picture/fm13_.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../style.css" type="text/css">
-  <title>fm13</title>
+  <title>fm13_</title>
   <link rel="shortcut icon" href="../img/icon.png" type="image/png">
 </head>
 
@@ -14,16 +14,16 @@
   </div>
   
   <div class="image">
-    <a href="fm13_.html"><img src="image/fm13.png" alt=""></a>
+    <a href="fm13.html"><img src="image/fm13_.png" alt=""></a>
   </div>
   
   <div class="picturetitle">
-    嫁と羽子板（かいたひと：<a href="http://www.pixiv.net/member.php?id=4658416" target="_blank">ﾊｺ[ﾟдﾟ]SDT</a> さん）
+    嫁と羽子板（かいたひと：<a href="http://www.pixiv.net/member.php?id=4658416" target="_blank">ﾊｺ[ﾟдﾟ]SDT</a>＆南正太郎）
   </div>
   
   <div class="caption">
-    ハコさんから頂いた年賀状<br>
-    ミクさーん！　ミクミクミク！　アーッ!!　ああーっ!!
+    色塗ってみました<br>
+    嫁への愛を止められなかった
   </div>
 
   <div class="back">
